# docchat-mcp

./: README.md  README.zh-CN.md  pyproject.toml
docs/: knowledge-pack-format.md  writing-guide.md
docs/plans/: 2026-03-14-openapi-import.md  2026-03-19-skill-system-enhancement.md
docs/specs/: 2026-03-14-openapi-import-design.md
examples/demo-api/: docchat.yaml
examples/demo-api/_overview/: INDEX.md
examples/demo-api/_shared/: INDEX.yaml  error_codes.md
examples/demo-api/feeds/get-comments/: GUIDE.md  META.yaml
examples/demo-api/feeds/get-posts/: GUIDE.md  META.yaml
examples/demo-api/feeds/get-users/: GUIDE.md  META.yaml
skills/: docchat-author.md  docchat-reviewer.md
src/docchat/: __init__.py  cli.py  mcp_server.py  schema.py
src/docchat/data/: docchat-author.md
src/docchat/engine/: __init__.py  index_loader.py  prompts.py
src/docchat/importers/: __init__.py  openapi.py
tests/: conftest.py  test_cli.py  test_import_openapi.py  test_index_loader.py  test_mcp_server.py  test_prompts.py  test_schema.py
