[project]
name = "docchat-mcp"
version = "0.3.0"
description = "Turn your API docs into an intelligent MCP server with deterministic routing and layered knowledge injection."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.2",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
serve = ["uvicorn[standard]>=0.40.0"]
dev = ["pytest>=9.0", "pytest-asyncio>=1.3"]

[project.scripts]
docchat = "docchat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docchat"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
pythonpath = ["src"]
